# vkRenderer

./: .gitignore  CMakeLists.txt  build-shaders.bat  cmake-linux-ninja.sh
Data/configs/: Camera.json
Vkr/include/Game/: VkrGame.h
Vkr/src/: main.cpp
Vkr/src/Game/: VkrGame.cpp
data/configs/: Camera.json
render/include/: Array.h  Buffer.h  Camera.h  DrawCanvas.h  DynamicUniformBuffer.h  DynamicUniformBufferEntry.h  Enums.h  Hash.h  Input.h  Logging.h  Material.h  Render.h  Serialization.h  Shader.h  ShaderManager.h  Texture.h  Types.h  VertexBuffer.h  VertexCache.h  VertexTypes.h  vkr_Math.h  vkr_Windows.h
render/src/: Buffer.cpp  Camera.cpp  DrawCanvas.cpp  DynamicUniformBuffer.cpp  Input.cpp  Logging.cpp  Material.cpp  Render.cpp  Serialization.cpp  ShaderManager.cpp  Texture.cpp  VertexBuffer.cpp  VertexCache.cpp  main.cpp
shaders/: Phong_fs.hlsl  Phong_vs.hlsl  Shape_vs.hlsl  Skybox_fs.hlsl  Triangle_fs.hlsl  Triangle_vs.hlsl  shape.vert  triangle.frag  triangle.vert
